--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "element-ui": "^2.4.5",
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
+    "video.js": "latest",
     "vue": "^2.6.11",
-    "vue-router": "^3.0.7"
+    "vue-router": "^3.0.7",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
